--- a/TwinCatOhje.org
+++ b/TwinCatOhje.org
@@ -268,17 +268,19 @@ Simuloinnissa PC:llä ajetaan samaa TwinCat Runtime jota myös logiikat käyttä
 joten ohjelmien tulisi käyttätyä realistisesti.
 
 Seuraavaksi kuvataan vaihe vaiheelta miten simulointi tehdään.
-1. Varmista että sovellus kääntyy
+1. *Varmista että sovellus kääntyy*
+
    Ennnen simuloinnin yrittämistä kannattaa varmistaa että sovellus kääntyy ja
    kaikki on kunnossa simulointia varten. Kääntäminen tapahtuu *Build*-valikon
    *Build Solution* komennolla.
   
    [[file:kuvat/BuildSolution.png]]
-
+  
    Konsoliin tulostuu käännöksen tietoa käännöksestä, ja mahdolliset virheet
    jotka täytyy korjata ennen kuin sovellusta voi simuloida.
   
-2. Aktivoi konfiguraatio
+2. *Aktivoi konfiguraatio*
+
    Onnistuneen kääntämisen jälkeen tämän hetkinen konfiguraatio täytyy
    aktivoida, jolloin kaikki PLC-projektin tiedostot siirretään kohdelaitteistolle
    (tässä tapauksessa simuloidulle PLC:lle). Konfiguraation aktivointi tapahtuu
@@ -302,7 +304,8 @@ Seuraavaksi kuvataan vaihe vaiheelta miten simulointi tehdään.
    Tämän jälkeen PLC-projekti on kopioitu simuloidulle logiikalle ja on
    *Run*-moodissa jos työkalurivillä näkyy vihreä ikoni.
 
-3. Login
+3. *Login*
+
    Seuraavaksi suoritetaan *Login* klikkaamalla työkalupalkin ikonia.
 
    [[file:kuvat/Login2.png]]
@@ -310,7 +313,8 @@ Seuraavaksi kuvataan vaihe vaiheelta miten simulointi tehdään.
    TwinCat kysyy halutaanko luoda ja ladata sovellus logiikalle.
    Vastataan *Yes*.
 
-4. Start
+4. *Start*
+
    Kun sovellus on ladattu logiikalle klikataan työkalupalkin vihreää
    "play"-kuvaketta, jolloin sovellus käynnistetään.
 
